tests/neg/unused-var.scala
object Test {
  unused var i: Int = 1 // error
}
